generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

enum EntryType {
  POR_REPARTO
  REINGRESO
  RECIBIDO_OTROS_DESPACHOS
  COMPETENCIA
  IMPEDIMENTO
  OTRAS_ENTRADAS_NO_EFECTIVAS
}

enum ActionType {
  AUTO
  SENTENCIA
}

enum GuardianShipType {
  SALUD
  SEGURIDAD_SOCIAL
  VIDA
  MINIMO_VITAL
  IGUALDAD
  EDUCACION
  DEBIDO_PROCESO
  PETICION
  INFORMACION_PUBLICA
  CONTRA_PROVIDENCIAS_JUDICIALES
  MEDIO_AMBIENTE
  OTROS
}

enum HabeasCorpusType {
  LIBERTAD
  OTROS
}

enum LaborType {
  ORDINARIOS_SEGURIDAD_SOCIAL
  ORDINARIOS_CONTRATOS_TRABAJO
  ORDINARIOS_RECONOCIMIENTO_HONORARIOS
  ORDINARIOS_OTROS
  EJECUTIVOS_SEGURIDAD_SOCIAL
  EJECUTIVOS_CONTRATO_TRABAJO
  EJECUTIVOS_APORTES_PARAFISCALES
  EJECUTIVOS_OTROS
  CONCILIACION_EXTRAJUDICIAL
  PAGOS_POR_CONSIGNACION
  OTROS
}


enum TypeTrialEnum {
  LABORAL
  TUTELA
  INCIDENTE_DE_DESACATO
  HABEAS_CORPUS
}


model Person {
  id        String   @id @default(uuid())
  name      String
  lastName  String

  defendantOf Trial[] @relation("DefendantTrials")
  plaintiffOf Trial[] @relation("PlaintiffTrials")
}

model TypeTrial {
  id          String        @id @default(uuid())
  name        TypeTrialEnum
  description String

  categories  Category[]
  trials      Trial[]
}

model Category {
  id          String   @id @default(uuid())
  description String
  typeTrialId String
  typeTrial   TypeTrial @relation(fields: [typeTrialId], references: [id])

  trials      Trial[]
}

model TypeAction {
  id          String   @id @default(uuid())
  description String

  descriptionActions DescriptionAction[]
}

model DescriptionAction {
  id           String   @id @default(uuid())
  description  String
  typeActionId String
  typeAction   TypeAction @relation(fields: [typeActionId], references: [id])
  actions      Action[]
}

model Action {
  id                  String   @id @default(uuid())
  type                String
  descriptionActionId String
  date                DateTime

  descriptionAction DescriptionAction @relation(fields: [descriptionActionId], references: [id])
  trialId           String?
  trial             Trial? @relation(fields: [trialId], references: [id])
}

model Trial {
  id           String     @id @default(uuid())
  plaintiffId  String
  defendantId  String
  typeTrialId  String
  typeTrial    TypeTrial  @relation(fields: [typeTrialId], references: [id])
  arrivalDate  DateTime
  closeDate    DateTime?
  status       String
  categoryId   String
  entryType    EntryType
  category     Category   @relation(fields: [categoryId], references: [id])

  plaintiff    Person     @relation("PlaintiffTrials", fields: [plaintiffId], references: [id])
  defendant    Person     @relation("DefendantTrials", fields: [defendantId], references: [id])
  actions      Action[]
}

model User {
  id        Int      @id @default(autoincrement())
  username  String   @unique
  password  String
  createdAt DateTime @default(now())
}
