@startuml "Gestión Judicial"

package "com.myapp.model" {
    class Trial {
        + id: String
        + plaintiff: String
        + defendant: String
        + typeTrial: TypeTrial
        + arrivalDate: Date
        + closeDate: Date
        + status: Status
        + category: String
        + entryType: EntryType

        +addAction(action:Action):void
        +getId(): String
        +getDefendant(): Person
        +getPlaintiff(): Person
        +getDate(): Date
        +getCategory(): Category
        +toString(): String
    }

    class Person {
        -String id
        -String name
        -String lastName

        +getId(): String
        +getName(): String
        +getLastName(): String
        +toString(): String
    }

    class Category {
        -String id
        -String description
        -TypeTrial type

        +getId(): String
        +getDescription(): String
        +getType(): TypeTrial
        +toString(): String
    }

    class TypeTrial {
        -String id
        -String description

        +getId(): String
        +getDescription(): String
        +toString(): String
    }

    class TypeAction {
        -String id
        -String description

        +getId(): String
        +getDescription(): String
        +toString(): String
    }

    class Action {
        -String id
        -String type
        -DescriptionAction descriptionAction
        -Date date

        +getId(): String
        +getType(): String
        +getDescriptionAction(): DescriptionAction
        +getDate(): Date
        +toString(): String
    }

    class DescriptionAction {
        -String id
        -String description
        -TypeAction typeAction

        +getId(): String
        +getDescription(): String
        +getTypeAction(): TypeAction
        +toString(): String
    }

    class JudicialManager {
        -List<Trial> trials
        -List<Person> people
        -HashMap<TypeTrial, Map<ActionType, ArrayList<String>>> actionDescriptions;
        
        +createTrial(id: String, defendant: Person, plaintiff: Person, date: Date, category: Category): Trial
        +searchTrialsByCategory(category: Category): List<Trial>
        +searchPersonById(id:String):Person
        +createPerson(id:String, name:String, lastName:String)
        +archiveTrial(trial: Trial): void
        +searchTrialById(trialId: String): Trial
        +addAction(trialId: String, idTypeLegalProceeding: int, date: String, description: String): void
        +addATrial(trial: Trial): void
        +addActionType(idLegalProceeding: int, typeTrial: String, newDescription: String): void
        +getActionDescriptions(): HashMap<TypeTrial, Map<ActionType, ArrayList<String>>>

    }
}

package "com.myapp.model.types" {

    enum EntryType {
        POR_REPARTO
        REINGRESO
        RECIBIDO_OTROS_DESPACHOS
        COMPETENCIA
        IMPEDIMENTO
        OTRAS_ENTRADAS_NO_EFECTIVAS
        --
        - description: String
        + getDescription(): String
        + fromDescription(description: String): EntryType
    }

    enum ActionType {
        AUTO
        SENTENCIA
        --
        - id: int
        + getId(): int
        + fromId(id: int): ActionType
    }

    enum GuardianShipType {
        SALUD
        SEGURIDAD_SOCIAL
        VIDA
        MINIMO_VITAL
        IGUALDAD
        EDUCACION
        DEBIDO_PROCESO
        PETICION
        INFORMACION_PUBLICA
        CONTRA_PROVIDENCIAS_JUDICIALES
        MEDIO_AMBIENTE
        OTROS
        --
        + description: String
        + getDescription(): String
        + fromDescription(description: String): GuardianShipType
    }

    enum HabeasCorpusType {
        LIBERTAD
        OTROS
        --
        + description: String
    }

    enum LaborType {
        ORDINARIOS_SEGURIDAD_SOCIAL
        ORDINARIOS_CONTRATOS_TRABAJO
        ORDINARIOS_RECONOCIMIENTO_HONORARIOS
        ORDINARIOS_OTROS
        EJECUTIVOS_SEGURIDAD_SOCIAL
        EJECUTIVOS_CONTRATO_TRABAJO
        EJECUTIVOS_APORTES_PARAFISCALES
        EJECUTIVOS_OTROS
        CONCILIACION_EXTRAJUDICIAL
        PAGOS_POR_CONSIGNACION
        OTROS
        --
        + description: String
        + getDescription(): String
        + fromDescription(description: String): LaborType
    }

    enum TypeTrial {
        LABORAL
        TUTELA
        INCIDENTE_DE_DESACATO
        HABEAS_CORPUS
        --
        + description: String
        + id: int
        + getDescription(): String
        + fromDescription(description: String): TypeTrial
    }
}

Trial --> Category : category
Trial --> Person : defendant
Trial --> Person : plaintiff
Trial --> Action : actions
Category --> TypeTrial : type
Action --> DescriptionAction : descriptionAction
DescriptionAction --> TypeAction : typeAction

JudicialManager --> Trial
JudicialManager --> Person


@enduml
